# krypy

./: .buildinfo  .flake8  .gitignore  .travis.yml  LICENSE  Makefile  README.md  __init__.py  debian-packaging.md  example.py  genindex.html  index.html  krypy.html  krypy.linsys.html  krypy.tests.html  krypy.utils.html  linsys.py  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yml
_sources/: index.txt  krypy.txt
docs/: Makefile  bibliography.rst  conf.py  index.rst  krypy.deflation.rst  krypy.linsys.rst  krypy.recycling.evaluators.rst  krypy.recycling.factories.rst  krypy.recycling.generators.rst  krypy.recycling.rst  krypy.rst  krypy.tests.rst  krypy.utils.rst  modules.rst
krypy/: __about__.py  __init__.py  _convenience.py  deflation.py  linsys.py  mfuncs.py  recycling.py  utils.py
krypy/recycling/: __init__.py  evaluators.py  factories.py  generators.py  linsys.py
krypy/tests/: test_convenience_wrappers.py  test_deflation.py  test_linsys.py  test_recycling.py  test_utils.py  tests.py
test/: test_convenience_wrappers.py  test_deflation.py  test_linsys.py  test_recycling.py  test_utils.py
tests/: tests.py
